# mcp-server-grist

./: .env.template  .gitignore  Dockerfile  README.md  SECURITY.md  claude_desktop_config_json  docker-compose.yml  grist_api.yml  grist_form_integration.py  grist_mcp_server.py  grist_tools_integration.py  pyproject.toml  requirements.txt  setup.py  test_grist_mcp.py
.github/workflows/: DELETE_first-upload.yml  OLD_publish.yml  debug-pypi.yml  first-upload.yml  publish-enhanced.yml  publish.yml  tests.yml
archive/: christmas_order_tool.py  grist_additional_tools.py  grist_form_tools.py
docs/: index.md  index.mdx  tools-reference.mdx
